[gd_scene load_steps=6 format=3 uid="uid://bl4s74fg06xet"]

[ext_resource type="Script" uid="uid://usr2gponh8s7" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://2p6c5c87txcx" path="res://Textures/Player/player_sprite.png" id="1_l8h54"]
[ext_resource type="PackedScene" uid="uid://deuow7u07d07s" path="res://Utility/hurt_box.tscn" id="3_btcbx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
radius = 5.54694
height = 25.8553

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwnis"]
size = Vector2(13, 20)

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_4ntmi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_l8h54")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
scale = Vector2(1.05394, 0.818103)
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_btcbx")]
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(3, 1)
shape = SubResource("RectangleShape2D_gwnis")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]

[editable path="HurtBox"]
